The entries in this file will be used when creating the README
for new versions, so keep that in mind when writing the
description.

The form of an entry should be:

Name: 
Date:
Tag: <post-commit CVS tag>
Description:

----------------------------------------------------------------------
Name: Matthias Blume
Date: 2001/07/10 17:30:00 EDT
Tag: Release_110_34
Description:

New version number (110.34). New bootfiles.

----------------------------------------------------------------------
Name: Matthias Blume
Date: 2001/07/09 16:00:00 EDT
Tag: blume-20010709-more-varargs
Description:

I changed the handling of varargs in ml-nlffigen again:
The ellipsis ... will now simply be ignored (with an accompanying warning).

The immediate effect is that you can actually call a varargs function
from ML -- but you can't actually supply any arguments beyond the ones
specified explicitly.  (For example, you can call printf with its format
string, but you cannot pass additional arguments.)

This behavior is only marginally more useful than the one before, but
it has the advantage that a function or, more importantly, a function
type never gets dropped on the floor, thus avoiding follow-up problems with
other types that refer to the offending one.

----------------------------------------------------------------------
Name: Matthias Blume
Date: 2001/07/09 11:25:00 EDT
Tag: blume-20010709-varargs
Description:

1. ckit-lib.cm now exports structure Error
2. ml-nlffigen reports occurences of "..." (i.e., varargs function types)
   with a warning accompanied by a source location.  Moreover, it
   merely skips the offending function or type and proceeds with the
   rest of its work.u  As a result, one can safely feed C code containing
   "..." to ml-nlffigen.
3. There are some internal improvements to CM, providing slightly
   more general string substitutions in the tools subsystem.

----------------------------------------------------------------------
Name: Matthias Blume